tmp5zbJTF/diagnostics/iptables
# Generated by iptables-save v1.4.21 on Fri Jul 17 15:42:29 2015
*nat
:PREROUTING ACCEPT [45809:2725149]
:INPUT ACCEPT [45809:2725149]
:OUTPUT ACCEPT [60394:4161348]
:POSTROUTING ACCEPT [60394:4161348]
:DOCKER - [0:0]
:felix-PREROUTING - [0:0]
-A PREROUTING -j felix-PREROUTING
-A PREROUTING -m addrtype --dst-type LOCAL -j DOCKER
-A OUTPUT ! -d 127.0.0.0/8 -m addrtype --dst-type LOCAL -j DOCKER
-A POSTROUTING -m set --match-set felix-masq-ipam-pools src -m set ! --match-set felix-all-ipam-pools dst -j MASQUERADE
-A POSTROUTING -s 172.17.0.0/16 ! -o docker0 -j MASQUERADE
COMMIT
# Completed on Fri Jul 17 15:42:29 2015
# Generated by iptables-save v1.4.21 on Fri Jul 17 15:42:29 2015
*filter
:INPUT ACCEPT [2354664:592186580]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [2474661:216297506]
:DOCKER - [0:0]
:felix-FORWARD - [0:0]
:felix-FROM-ENDPOINT - [0:0]
:felix-INPUT - [0:0]
:felix-TO-ENDPOINT - [0:0]
-A INPUT -j felix-INPUT
-A FORWARD -j felix-FORWARD
-A FORWARD -o docker0 -j DOCKER
-A FORWARD -o docker0 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -i docker0 ! -o docker0 -j ACCEPT
-A FORWARD -i docker0 -o docker0 -j ACCEPT
-A felix-FORWARD -i cali+ -j felix-FROM-ENDPOINT
-A felix-FORWARD -o cali+ -j felix-TO-ENDPOINT
-A felix-FORWARD -i cali+ -j ACCEPT
-A felix-FORWARD -o cali+ -j ACCEPT
-A felix-FROM-ENDPOINT -j DROP
-A felix-INPUT -p ipv4 -m set ! --match-set felix-calico-hosts-4 src -j DROP
-A felix-INPUT -i cali+ -j felix-FROM-ENDPOINT
-A felix-INPUT -i cali+ -j ACCEPT
-A felix-TO-ENDPOINT -j DROP
COMMIT
# Completed on Fri Jul 17 15:42:29 2015
